--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="name">Enter Your Email</div>
         <input type="email" name="email" id="email" placeholder="Enter Your Email" required>
         <div class="name">Enter Your Phone Number(Optional)</div>
-        <input type="tel" name="number" id="number" placeholder="Enter Your Name">
+        <input type="tel" name="number" id="number" placeholder="Enter Your Number">
         <div class="name">Enter Your Message</div>
         <textarea name="Message" id="Message" cols="32" rows="9" placeholder="Enter Your Message" required></textarea>
         <div class="button">
