--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </div>
     </div>
 
-    <footer>Designed With 💓 By <a href="https://www.pankajktech.blogspot.com" target="_blank">PankajKTech</a> </footer>
+    <footer>Made With 💓 By <a href="https://www.pankajktech.blogspot.com" target="_blank">PankajKTech</a> </footer>
 </body>
 </html>
