--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="name">Enter Your Phone Number(Optional)</div>
         <input type="tel" name="number" id="number" placeholder="Enter Your Number">
         <div class="name">Enter Your Message</div>
-        <textarea name="Message" id="Message" cols="32" rows="9" placeholder="Enter Your Message" required></textarea>
+        <textarea name="Message" id="Message" cols="34" rows="9" placeholder="Enter Your Message" style="resize:none ;" required></textarea>
         <div class="button">
         <button type="submit">Submit</button>
     </div>
