--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,27 @@
     <link rel="stylesheet" href="contact.css">
     <title>Contact Me</title>
 </head>
+
 <body>
     <div id="contact">
         <h1 class="title">-: Contact Us :- </h1>
         <div class="form">
-        <div class="name">Enter Your Name</div>
-        <input type="text" name="Name" id="Name" placeholder="Enter Your Name" required>
-        <div class="name">Enter Your Email</div>
-        <input type="email" name="email" id="email" placeholder="Enter Your Email" required>
-        <div class="name">Enter Your Phone Number(Optional)</div>
-        <input type="tel" name="number" id="number" placeholder="Enter Your Number">
-        <div class="name">Enter Your Message</div>
-        <textarea name="Message" id="Message" cols="34" rows="9" placeholder="Enter Your Message" style="resize:none ;" required></textarea>
-        <div class="button">
-        <button type="submit">Submit</button>
-    </div>
-    </div>
+            <div class="name">Enter Your Name</div>
+            <input type="text" name="Name" id="Name" placeholder="Enter Your Name" required>
+            <div class="name">Enter Your Email</div>
+            <input type="email" name="email" id="email" placeholder="Enter Your Email" required>
+            <div class="name">Enter Your Phone Number(Optional)</div>
+            <input type="tel" name="number" id="number" placeholder="Enter Your Number">
+            <div class="name">Enter Your Message</div>
+            <textarea name="Message" id="Message" cols="34" rows="9" placeholder="Enter Your Message"
+                style="resize:none ;" required></textarea>
+            <div class="button">
+                <button type="submit">Submit</button>
+            </div>
+        </div>
     </div>
 
-    <footer>Made With 💓 By <a href="https://www.pankajktech.blogspot.com" target="_blank">PankajKTech</a> </footer>
+    <!-- <footer>Made With 💓 By <a href="https://www.pankajktech.blogspot.com" target="_blank">PankajKTech</a> </footer> -->
 </body>
+
 </html>
