--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
     <div id="contact">
-        <h1 class="title">-: Contact Us :- </h1>
+        <!-- <h1 class="title">-: Contact Us :- </h1> -->
         <div class="form">
+            <h2 class="Details">Please Enter The Details</h2>
             <div class="name">Enter Your Name</div>
             <input type="text" name="Name" id="Name" placeholder="Enter Your Name" required>
             <div class="name">Enter Your Email</div>
